--- a/themes/ezhil/layouts/index.html
+++ b/themes/ezhil/layouts/index.html
@@ -6,17 +6,14 @@
 		 {{ partial "head.html" . }}
 
 		<div class="recent-posts section">
-			<h2 class="section-header">
-				Recent posts
-			</h2>
+			<h2 class="section-header">Recent posts</h2>
 			<div class="posts">
 				{{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
 				{{ $paginator := .Paginate (where $pages "Params.hidden" "ne" true) }}
 				{{ range $paginator.Pages }}
 				<div class="post">
-					<div class="meta">{{ dateFormat "Jan 2, 2006" .Date }}</div>
-					<a class="title" href="{{ .RelPermalink }}">{{.Title}}</a> &mdash;
-					<span class="description">
+					<h3><a class="title" href="{{ .RelPermalink }}">{{.Title}}</a></h3>
+					<p><span class="meta">{{ dateFormat "Jan 2, 2006" .Date }}</span> - <span class="description">
 						{{ if isset .Params "description" }}
 						{{ .Description }}
 						{{ else if gt (len .RawContent) 120 }}
@@ -24,7 +21,7 @@
 						{{ else }}
 						{{ .RawContent }}
 						{{ end }}
-					</span>
+					</span></p>
 				</div>
 				{{ end }}
 				{{ template "partials/paginator.html" . }}
