--- a/themes/ezhil/layouts/partials/footer.html
+++ b/themes/ezhil/layouts/partials/footer.html
@@ -3,8 +3,16 @@
 		<div><a href="https://github.com/vividvilla/ezhil">Ezhil theme</a> | Built with <a href="https://gohugo.io">Hugo</a></div>
 	</nav>
 </div>
-
+{{- if and (isset .Site.Params "social") (isset .Site.Params "feathericonscdn") (eq .Site.Params.featherIconsCDN true) -}}
+	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js" async defer></script>
+{{- else if (isset .Site.Params "social") -}}
+	<script src="{{ .Site.BaseURL }}js/feather.min.js"></script>
+{{- end -}}
 {{ template "_internal/google_analytics_async.html" . }}
 {{- with .Site.Params.Social -}}
-<script>feather.replace()</script>
+<script>
+	window.addEventListener('DOMContentLoaded', function() {
+		feather.replace();
+	});
+</script>
 {{- end -}}
