--- a/themes/ezhil/layouts/partials/head.html
+++ b/themes/ezhil/layouts/partials/head.html
@@ -1,19 +1,21 @@
 <div class="header">
-	<h1 class="site-title">{{ .Site.Title }}</h1>
+	<h1 class="site-title">Khoi<span>Pro</span></h1>
 	<div class="site-description">
 		{{- if isset .Site.Params "subtitle" -}}
 		<h2>{{ .Site.Params.Subtitle | markdownify }}</h2>
 		{{- end -}}
-		<nav class="nav social">
+		<nav class="nav nav--social">
 			<ul class="flat">
 				{{- range $index, $key := .Site.Params.Social -}}
-				<a href="{{ $key.url }}" title="{{ $key.name }}"><i data-feather="{{ $key.icon }}"></i></a>
+				<li>
+					<a href="{{ $key.url }}" title="{{ $key.name }}"><i data-feather="{{ $key.icon }}"></i></a>
+				</li>
 				{{- end -}}
 			</ul>
 		</nav>
 	</div>
 
-	<nav class="nav">
+	<nav class="nav nav--main">
 		<ul class="flat">
 			{{ range .Site.Menus.main }}
 			<li>
