--- a/themes/ezhil/layouts/partials/footer.html
+++ b/themes/ezhil/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer wrapper">
 	<nav class="nav">
-		<div><a href="https://github.com/vividvilla/ezhil">Ezhil theme</a> | Built with <a href="https://gohugo.io">Hugo</a></div>
+		<div>Built with <a href="https://gohugo.io" target="_blank">Hugo</a> using <a href="https://render.com" target="_blank">Render.com</a> static site hosting.</div>
 	</nav>
 </div>
 {{- if and (isset .Site.Params "social") (isset .Site.Params "feathericonscdn") (eq .Site.Params.featherIconsCDN true) -}}
